--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@popperjs/core": "^2.10.2",
     "angular-svg-icon": "^13.0.0",
     "bootstrap": "^5.1.3",
+    "detect-passive-events": "^2.0.3",
+    "ng5-slider": "^1.2.6",
     "rxjs": "~7.5.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
