--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "angular-svg-icon": "^13.0.0",
+    "apexcharts": "^3.35.3",
     "bootstrap": "^5.1.3",
     "detect-passive-events": "^2.0.3",
+    "ng-apexcharts": "^1.7.1",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ng5-slider": "^1.2.6",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
