--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.1.3",
     "detect-passive-events": "^2.0.3",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.1",
     "ng-multiselect-dropdown": "^0.3.8",
     "ng5-slider": "^1.2.6",
